cabal-version:      2.4
name:               cardano-stats-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cardano-stats-backend
    main-is:          Main.hs
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , cardano-stats-backend
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:
    other-modules:    Server
    build-depends:    base ^>=4.14.3.0
                    , hedis
                    , utf8-string
                    , aeson
                    , attoparsec
                    , base-compat
                    , bytestring
                    , containers
                    , directory
                    , http-api-data
                    , http-client
                    , http-media
                    , http-types
                    , mtl
                    , string-conversions
                    , text
                    , transformers
                    , wai
                    , warp

    -- Servant dependencies
    build-depends:    servant
                    , servant-server
                    , servant-client
                    , servant-docs

    -- Other dependencies: Lower bound around what is the latest Stackage LTS.
    -- Here can be exceptions if we really need features from the newer versions.
    build-depends:
              blaze-html   >= 0.9.0.1 && < 0.10
            , blaze-markup >= 0.8.0.0 && < 0.9
            , cookie       >= 0.4.3   && < 0.5
            , js-jquery    >= 3.3.1   && < 3.4
            , lucid        >= 2.9.11  && < 2.12
            , random       >= 1.1     && < 1.3
            , servant-js   >= 0.9     && < 0.10
            , time         >= 1.6.0.1 && < 1.13

    -- For legacy tools, we need to specify build-depends too
    build-depends: markdown-unlit >= 0.5.0 && <0.6
    build-tool-depends: markdown-unlit:markdown-unlit >= 0.5.0 && <0.6
    
    default-language: Haskell2010

test-suite the-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          tests.hs
    other-modules:
    ghc-options:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , QuickCheck
                    , quickcheck-instances
                    , hedis
                    , utf8-string
    default-language: Haskell2010
