cabal-version:      2.4
name:               cardano-stats-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cardano-stats-backend
    main-is:          Main.hs
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , cardano-stats-backend
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Server
    other-modules:
    build-depends:    base ^>=4.14.3.0
                    , hedis
                    , utf8-string
                    , aeson
                    , attoparsec
                    , base-compat
                    , bytestring
                    , containers
                    , directory
                    , http-api-data
                    , http-client
                    , http-media
                    , http-types
                    , mtl
                    , string-conversions
                    , text
                    , transformers
                    , wai
                    , wai-cors
                    , warp

    -- Servant dependencies
    build-depends:    servant-server

    default-language: Haskell2010

test-suite the-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          tests.hs
    other-modules:
    ghc-options:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , QuickCheck
                    , quickcheck-instances
                    , hedis
                    , utf8-string
    default-language: Haskell2010
